[package]
name = "rust_or_bust"
version = "0.0.1"
authors = [
  "Austin Hendrix <namniart@gmail.com>",
  "Chelsea Lightfoot <clightfootdesign@gmail.com>",
  "Christopher Patton <chpatton013@gmail.com>",
  "Daniel Miller <peaches491@gmail.com>",
  "Ryan Snyder <ryan.snyder3@gmail.com>",
  "Thomas Soria <soriat@gmail.com>",
]

[dependencies]
error-chain = "0.11.0"
nalgebra = "0.13.0"
ncollide = "0.13.0"
nphysics2d = "0.6"
piston = "0.34.0"
piston2d-graphics = "0.23.0"
piston2d-sprite = "0.39.0"
piston_window = "0.72.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
find_folder = "*"

[features]
# Treat warnings as a build error.
strict = []
